# JiMP2

./: .travis.yml  README.md
lab1/: README.txt
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/: README.txt
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/: README.txt
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: TreeIterators.cpp  TreeIterators.h  main.cpp
lab2/: README.txt
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp  wejscie.txt
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  (+2 more)
lab3/: README.txt
lab4/: README.txt
lab5/: README.txt
lab6/: README.txt
lab8/: README.txt
lab8/moviesubtitles/: CMakeLists.txt  MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
lab8/student/: CMakeLists.txt  StudentException.cpp  StudentException.h  main.cpp
(+40 files in other folders)
